# box

./: .clangd  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  README.md  fake_dlam_printer.c  lv_conf.h  opencode.json  run.sh.in  user_cross_compile_setup.cmake
build_test/: Makefile  cmake_install.cmake
build_test/lvgl/: Makefile  cmake_install.cmake  lv_conf_expanded.h
build_test/src/lib/lv_lib_100ask/: Makefile  cmake_install.cmake
build_v853/: Makefile  cmake_install.cmake
build_v853/lib/: liblvgl_linux.so.1  liblvgl_linux.so.1.0.0
build_v853/lvgl/: Makefile  cmake_install.cmake
config/: lv_conf_v833.h  lv_conf_v853.h  lv_conf_wayland.h
docs/: DEV_GUIDE.md
eyesee-mpp/lib/: libblkid.so.1  libbluetooth.so.3.19.2  libbz2.so.1.0  libcairo-gobject.so.2.11400.6  libcap.so.2.51  libcares.so.2.1.0  libcom_err.so.2.1  libcurl.so.4.4.0  libdbus-1.so.3.14.5  libe2p.so.2  libext2fs.so.2  libfdk-aac.so.1  libform.so.5.9  libformw.so.5.9  libfreetype.so.6  libgio-2.0.so.0  libglib-2.0.so.0.5000.1  libglog.so.0  libgthread-2.0.so.0.5000.1  libhistory.so.6.3  libical.so.0  libip4tc.so.0  libiptc.so.0.0.0  libjson-c.so.4.0.0  libmad.so.0  libncurses.so.5.9  libncursesw.so.5  libnghttp2.so.14.13.3  libpanelw.so.5.9  libpcre16.so.0  libpcre32.so.0  libsamplerate.so.0  libsndfile.so.1  libsysfs.so.2.0.1  libtinyalsa.so.1.1.1  libwebp.so.5  libwebsockets.so.12  libwolfssl.so.19.3.0  libxtables.so.10
eyesee-mpp/lib/cmake/glog/: glog-targets.cmake
eyesee-mpp/lib/dbus-1/: dbus-daemon-launch-helper
eyesee-mpp/lib/dlam/: libopencv_core.so.3.4  libopencv_imgcodecs.so.3.4  libopencv_imgproc.so.3.4
include/lib/: libMemAdapter.la  libaftertreatment.la  libcdc_base.la  libfbm.la  libsbm.la  libvdecoder.la  libvenc_base.la  libvencoder.la
include/linux/: compiler.h
reverse/: AGENTS.md  N2_analysis.md  ble_paperang.py  dlamPrinter_cmd_analysis.md  dlam_bridge  dlam_bridge.c  dlam_cli  dlam_cli.c  dlam_client  dlam_client.py  dlam_cmd  dlam_listen  dlam_listen.c  dlam_mcu  dlam_mcu.c  dlam_monitor  dlam_test  strace
reverse/extractions/: kernel
src/: main.c  main.h
src/arch/: arch.h
src/arch/armhf/chips/v833/: device.c  display.c  input.c  power.c
src/arch/armhf/chips/v853/: power.c
src/arch/armhf/chips/v853s/: device.c  display.c  input.c  ls_printer.c
src/arch/v833/: display.c  input.c  power.c
src/arch/v853/: display.c  input.c  ls_printer.h  power.c  v853.h
src/arch/wayland/: device.c  display.c  input.c  power.c
src/arch/x86_64/wayland/: device.c  display.c  input.c  power.c
src/common/: button.c  button.h  container.c  container.h  events.c  events.h
src/common/audio/: ff_player.h  player.c
src/common/battery/: battery_manager.c
src/common/games/: bird.c  bird.h
src/common/views/: lv_text_clock.c  lv_text_clock.h
src/lib/: audio.c  audio.h  button.c  button.h  cJSON  container.c  container.h  events.c  events.h  eyesee_player.c  eyesee_player.h  eyesee_player_example.c  ff_player.c  ff_player.h  file_manager.c  file_manager.h  lua.c  player.c  player.h  settings.c  test_button.c  test_button.h
src/lib/audio/: audio.c  audio.h
src/lib/battery/: battery_manager.h
src/lib/games/: bird.c  bird.h
src/lib/utils/: str_utils.c  str_utils.h
tools/: Makefile  libMb.h  test_libmb.c  test_stbi.c
